--- a/package.json
+++ b/package.json
@@ -97,8 +97,10 @@
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^5.2.0",
     "customize-cra": "^0.9.1",
+    "cypress": "^7.6.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
